tests/baselines/reference/duplicateObjectLiteralProperty.errors.txt
==== tests/cases/compiler/duplicateObjectLiteralProperty.ts (5 errors) ====
    var x = {
        a: 1,
        b: true, // OK
        a: 56,   // Duplicate
        ~~~~~
!!! duplicateObjectLiteralProperty.ts(4,5): error TS2000: Duplicate identifier 'a'. Additional locations:
!!! 	duplicateObjectLiteralProperty.ts(2,5)
        \u0061: "ss", // Duplicate
        ~~~~~~~~~~~~
!!! duplicateObjectLiteralProperty.ts(5,5): error TS2000: Duplicate identifier '\u0061'. Additional locations:
!!! 	duplicateObjectLiteralProperty.ts(4,5)
        a: {
        ~~~~
            c: 1,
    ~~~~~~~~~~~~~
            "c": 56, // Duplicate
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~
!!! duplicateObjectLiteralProperty.ts(8,9): error TS2000: Duplicate identifier '"c"'. Additional locations:
!!! 	duplicateObjectLiteralProperty.ts(7,9)
        }
    ~~~~~
!!! duplicateObjectLiteralProperty.ts(6,5): error TS2000: Duplicate identifier 'a'. Additional locations:
!!! 	duplicateObjectLiteralProperty.ts(5,5)
    };
    
    
    var y = {
        get a() { return 0; },
        set a(v: number) { },
        get a() { return 0; }
        ~~~~~~~~~~~~~~~~~~~~~
!!! duplicateObjectLiteralProperty.ts(16,5): error TS2015: Getter 'a' already declared.
    };
    